# PDF-RAG-CHATBOT

./: README.md  main.py  pyproject.toml  requirements.txt  try.py  ui.py
faiss_index/: index.faiss  index.pkl
