[project]
name = "pdf-rag-chatbot"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) chatbot for querying PDFs using FAISS and Ollama."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.0",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-text-splitters>=1.1.0",
    "ollama>=0.6.1",
    "pypdf>=6.7.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.54.0"
]


